2012-01-04 Pierre Wieser <pwieser@trychlos.org>

	* src/nact/nact-icapabilities-tab.c: Review NactICapabilitiesTab interface.

	* src/nact/nact-ibasenames-tab.c: Review NactIBasenamesTab interface.

	* src/nact/nact-iaction-tab.c: Review NactIActionTab interface.

	Come back on core interfaces.

	* src/core/na-icontext.c:
	* src/core/na-iduplicable.c:
	* src/core/na-iexporter.c:
	* src/core/na-ifactory-object.c:
	* src/core/na-ifactory-provider.c:
	* src/core/na-iimporter.c:
	* src/core/na-iio-provider.c:
	* src/core/na-ioption.c:
	* src/core/na-ioptions-list.c
	(interface_init): Renamed back as interface_base_init().
	(interface_finalize): Renamed back as interface_base_finalize().

	* src/utils/console-utils.h: Re-include 'glib.h' header.

2012-01-03 Pierre Wieser <pwieser@trychlos.org>

	* src/core/na-ioptions-list.c: Review NAIOptionsList interface.

	* src/core/na-ioption.c: Review NAIOption interface.

	* src/core/na-iio-provider.c: Review NAIIOProvider interface.

	* src/core/na-iimporter.c:
	* src/core/na-importer.c: Review NAIImporterInterface.

	* src/core/na-factory-provider.c:
	* src/core/na-ifactory-provider.c: Review NAIFactoryProvider interface.

	* src/core/na-factory-object.c:
	* src/core/na-ifactory-object.c: Review NAIFactoryObject interface.

	* src/core/na-exporter.c:
	* src/core/na-iexporter.c: Review NAIExporter interface.

	* src/core/na-iduplicable.c: Review NAIDuplicable interface.

	* src/core/na-icontext.c: Review NAIContext interface.

	* src/test/test-iface-iface.c:
	* src/test/test-iface.c: Do some more tests on the interfaces.

	* src/utils/na-gconf2key.sh.in: Force GConf I/O provider to be read-only.

	* src/utils/console-utils.h: Remove superfluous 'glib-object.h' include.

	* src/utils/na-set-conf.c: New program.

	* src/core/na-settings.c:
	* src/core/na-settings.h
	(na_settings_set_string_ex,	na_settings_set_int_ex): New functions.

	* src/utils/Makefile.am: Updated accordingly.
